@@ -90,6 +90,9 @@ decl_stmt|;
 name|boolean
 name|isBlockPointer
 decl_stmt|;
+name|boolean
+name|ioExceptions
+decl_stmt|;
 name|String
 name|inputFile
 decl_stmt|;
@@ -115,6 +118,12 @@ operator|.
 name|isBlockPointer
 operator|=
 literal|true
+expr_stmt|;
+name|this
+operator|.
+name|ioExceptions
+operator|=
+literal|false
 expr_stmt|;
 block|}
 specifier|public
@@ -212,6 +221,30 @@ name|inputFile
 operator|=
 name|inputFile
 expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setIOExceptions
+parameter_list|(
+name|boolean
+name|ioe
+parameter_list|)
+block|{
+name|this
+operator|.
+name|ioExceptions
+operator|=
+name|ioe
+expr_stmt|;
+block|}
+specifier|public
+name|boolean
+name|getIOExceptions
+parameter_list|()
+block|{
+return|return
+name|ioExceptions
+return|;
 block|}
 block|}
 end_class
